# LingQ_clone

./: README.md
LingQ_clone/: 1_🏠_Homepage.py  README.md.txt  pyproject.toml
LingQ_clone/pages/: 2_📖_Import_lesson.py  3_🤓_Study_Vocabulary.py  4_📈_See_Stats.py
